Fix under-invalidation of frame scrollbar on hover

Ensure the layoutView() of the frame is setMayNeedPaintInvalidation()
when the scrollbar needs paint invalidation.

BTW, combine PaintInvalidationCapableScrollableArea::
boxForScrollControlPaintInvalidation() and ScrollbarArea::layoutBox()
which was added recently.

BUG=625757
TEST=paint/invalidation/iframe-scrollbar-hover.html

Review-Url: https://codereview.chromium.org/2136133002
Cr-Commit-Position: refs/heads/master@{#404958}

Former-commit-id: d88ee7c4ceeb1ade22e8525fdef60115fae7ae3e