third_party/WebKit/Source/core/paint/PaintInvalidationCapableScrollableArea.h
@@ -37,9 +37,10 @@ public:
     LayoutRect visualRectForScrollbarParts() const override;
 
 private:
-    virtual LayoutBox& boxForScrollControlPaintInvalidation() const = 0;
     virtual LayoutScrollbarPart* scrollCorner() const = 0;
     virtual LayoutScrollbarPart* resizer() const = 0;
+
+    void scrollControlWasSetNeedsPaintInvalidation() override;
 
     bool m_horizontalScrollbarPreviouslyWasOverlay;
     bool m_verticalScrollbarPreviouslyWasOverlay;
